# bored_bot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  example.env
src/: api.rs  bot.rs  config.rs  main.rs  utils.rs
